examples/test/testpolicy11780.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11780
  namespace: namespace135
spec:
  podSelector:
    matchLabels:
      key10: value3
      key16: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value17
      podSelector:
        matchLabels:
          key8: value38
          key11: value15
